# DriftDB

./: .dockerignore  .gitignore  ACHIEVEMENT.md  ADMIN_GUIDE.md  ARCHITECTURAL_REVIEW.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  Cargo.toml  Dockerfile  HONEST_README.md  LICENSE  Makefile  PRODUCTION_READINESS_REPORT.md  README.md  REPO_DESCRIPTION.txt  SESSION_SUMMARY.md  SQL_BRIDGE_SOLUTION.md  SUBQUERY_IMPLEMENTATION.md  TODOS.md  docker-compose.yml  fix_column_ordering.md  test_advanced_sql.py  test_backup_restore.py  test_basic_performance.py  test_basic_sql.py  test_count_star.py  test_distinct.py  test_drop_table.py  test_full_sql.py  test_new_features.py  test_postgres.py  test_psql.py  test_simple_txn.py  test_temporal.py  test_time_travel.py  test_transactions.py  test_update_columns.py  test_validator.py
.github/: description.md
.github/workflows/: ci.yml
benches/: performance.rs  time_travel_bench.rs
client_tests/: README.md  requirements.txt
client_tests/engine/: run_wal_tests.py  test_engine_wal_integration.py  test_wal_recovery.py
client_tests/integration/: comprehensive_sql_test_suite.py  test_fixed_features.py  test_transactions.py
client_tests/postgres/: test_connection.py  test_prepared_statements.py  test_simple.py
client_tests/sql/: test_basic_sql.py  test_explain_plan.py  test_index_optimization.py  test_set_operations.py  test_subqueries.sql  test_update_delete.py  test_where.py  test_where_simple.py
crates/driftdb-admin/: Cargo.toml
crates/driftdb-admin/src/: main.rs
crates/driftdb-cli/: Cargo.toml
crates/driftdb-cli/src/: backup.rs  main.rs
crates/driftdb-core/: Cargo.toml
crates/driftdb-core/benches/: performance.rs
crates/driftdb-core/src/: adaptive_pool.rs  audit.rs  auth.rs  backup.rs  backup_cli.rs  backup_enhanced.rs  backup_test.rs  cache.rs  columnar.rs  compression.rs  connection.rs  consensus.rs  constraints.rs  cost_optimizer.rs  distributed.rs  distributed_coordinator.rs  encryption.rs  engine.rs  error_recovery.rs  error_recovery_test.rs  errors.rs  events.rs  foreign_keys.rs  fulltext.rs  index.rs  index_strategies.rs  lib.rs  lockfree.rs  migration.rs  monitoring.rs  mvcc.rs  mvcc_engine.rs  observability.rs  optimizer.rs  parallel.rs  partitioning.rs  procedures.rs  query_cache.rs  query_cancellation.rs  query_optimizer.rs  (+25 more)
crates/driftdb-core/src/query/: executor.rs  mod.rs  parser.rs
crates/driftdb-core/src/rate_limit/: mod.rs
crates/driftdb-core/src/sql/: executor.rs  joins.rs  mod.rs  parser.rs  temporal.rs
crates/driftdb-core/src/storage/: frame.rs  meta.rs  mod.rs  segment.rs  streaming.rs  table_storage.rs
crates/driftdb-core/src/wal/: mod.rs
crates/driftdb-core/tests/: comprehensive_test.rs  demo_test.rs  file_locking_test.rs  integration_test.rs  migration_integration_test.rs  migration_transaction_test.rs  query_integration_test.rs  replication_integration_test.rs  transaction_integration_test.rs
crates/driftdb-server/: Cargo.toml
crates/driftdb-server/src/: advanced_pool.rs  advanced_pool_routes.rs  auth_config.toml  errors.rs  executor.rs  executor_subquery_tests.rs  health.rs  main.rs  metrics.rs  monitoring.rs  optimized_executor.rs  ordered_columns.rs  performance.rs  performance_routes.rs  tls.rs  transaction.rs  transaction_buffer.rs
crates/driftdb-server/src/protocol/: auth.rs  codec.rs  messages.rs  mod.rs
crates/driftdb-server/src/security/: mod.rs  sql_validator.rs
crates/driftdb-server/src/session/: extended_protocol.rs  mod.rs  prepared.rs
crates/driftdb-server/tests/: integration_test.rs
demo-data/tables/orders/: meta.json  schema.yaml
demo-data/tables/orders/indexes/: customer_id.idx  status.idx
demo-data/tables/orders/segments/: 00000001.seg
demo-data/tables/orders/snapshots/: 0000010000.snap
demo_data/tables/products/: meta.json  schema.yaml
demo_data/tables/products/indexes/: category.idx  name.idx
demo_data/tables/products/segments/: 00000001.seg
docs/: CHANGELOG.md  FEATURES.md  FEATURES_HONEST.md  PRODUCTION_DEPLOYMENT.md  README.md
docs/development/: WAL_TESTING.md
docs/guides/: IMPLEMENTATION_SUMMARY.md
docs/status/: CURRENT_STATUS.md  DEVELOPMENT_STATUS.md  KNOWN_ISSUES.md
examples/: simple_transaction.rs
examples/demo/: generate_orders.py  seed_orders.jsonl  tour.dql
scripts/: docker-quickstart.sh
test-db/tables/users/: meta.json  schema.yaml
test-db/tables/users/indexes/: email.idx  status.idx
test-db/tables/users/segments/: 00000001.seg
test_data/tables/test_table/: schema.yaml
test_data/tables/test_table/segments/: 00000001.seg
test_data/tables/users/: meta.json  schema.yaml
test_data/tables/users/indexes/: email.idx  name.idx
test_data/tables/users/segments/: 00000001.seg
test_txn_fixed/tables/simple_test/: schema.yaml
test_txn_fixed/tables/txn_test/: meta.json  schema.yaml
tests/: README.md  conftest.py  integration_tests.sql  run_all_tests.py  run_tests.py
tests/python/: README.md  run_all_tests.py
tests/python/integration/: test_create_index.py  test_rollback_detailed.py  test_sql.py  test_transaction_debug.py
tests/python/performance/: test_performance.py
tests/python/security/: test_sql_injection.py
tests/python/unit/: test_column_order_detailed.py  test_column_ordering.py  test_improvements.py  test_simple.py
tests/unit/: test_basic_operations.py
tests/utils/: __init__.py  data_generator.py  test_base.py
