[workspace]
members = ["crates/driftdb-core", "crates/driftdb-cli", "crates/driftdb-admin", "crates/driftdb-server"]
resolver = "2"

[workspace.package]
version = "0.7.0-alpha"
authors = ["DriftDB Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/driftdb/driftdb"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rmp-serde = "1.1"
bincode = "1.3"
zstd = "0.13"
crc32fast = "1.4"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nom = "7.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
snap = "1.1"
byteorder = "1.5"
fs2 = "0.4"
tempfile = "3.10"
criterion = "0.5"
proptest = "1.4"
hostname = "0.3"
num_cpus = "1.16"
