[package]
name = "driftdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rmp-serde = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
crc32fast = { workspace = true }
time = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
nom = { workspace = true }
uuid = { workspace = true }
fs2 = { workspace = true }
sha2 = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
