[package]
name = "driftdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rmp-serde = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
crc32fast = { workspace = true }
time = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
nom = { workspace = true }
uuid = { workspace = true }
fs2 = { workspace = true }
sha2 = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
base64 = "0.21"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
rand = "0.8"

[[bench]]
name = "performance"
harness = false
