[package]
name = "driftdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rmp-serde = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
crc32fast = { workspace = true }
time = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
nom = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
snap = { workspace = true }
byteorder = { workspace = true }
fs2 = { workspace = true }
sha2 = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
base64 = "0.21"
lru = "0.12"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
sqlparser = "0.51"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
regex = "1.10"
fastrand = "2.0"
ordered-float = "4.0"
tokio-tungstenite = "0.21"
futures-util = "0.3"
crossbeam-epoch = "0.9"
argon2 = "0.5"
lz4 = "1.24"
flate2 = "1.0"
brotli = "3.3"
csv = "1.3"
hostname = { workspace = true }
num_cpus = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "time_travel_bench"
harness = false
path = "../../benches/time_travel_bench.rs"
